@@ -1,3 +1,9 @@
+2007-10-25  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* Stdlib.cs: Fix perror(3) so that it works as expected.  (Since errno is
+	  cleared during P/Invoke, previously Stdlib.perror("") would always print
+	  "Success", which isn't very helpful.)
+
 2007-06-28  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* NativeConvert.generated.cs: Flush (add TryCopy() methods for Utimbuf).
